--- a/sass/_coolz.scss
+++ b/sass/_coolz.scss
@@ -180,86 +180,50 @@ pre{
 	}
 }
 
-.Large-12, 
-.large-12, 
-.L-12, 
 .l-12{
-	width: 100%;
+	width: percentage(12/12);
 }
 
-.Large-11, 
-.large-11, 
-.L-11, 
 .l-11{
-	width: 91.666%;
+	width: percentage(11/12);
 }
 
-.Large-10, 
-.large-10, 
-.L-10, 
 .l-10{
-	width: 83.333%;
+	width: percentage(10/12);
 }
 
-.Large-9, 
-.large-9, 
-.L-9, 
 .l-9{
-	width: 75%;
+	width: percentage(9/12);
 }
 
-.Large-8, 
-.large-8,
-.L-8, 
 .l-8{
-	width: 66.666%;
+	width: percentage(8/12);
 }
 
-.Large-7, 
-.large-7, 
-.L-7, 
 .l-7{
-	width: 58.333%;
+	width: percentage(7/12);
 }
 
-.Large-6, 
-.large-6, 
-.L-6, 
 .l-6{
-	width: 50%;
+	width: percentage(6/12);
 }
 
-.Large-5, 
-.large-5, 
-.L-5, 
 .l-5{
-	width: 41.666%;
+	width: percentage(5/12);
 }
 
-.Large-4, 
-.large-4, 
-.L-4, 
 .l-4{
-	width: 33.333%;
+	width: percentage(4/12);
 }
 
-.Large-3, 
-.large-3, 
-.L-3, 
 .l-3{
-	width: 25%;
+	width: percentage(3/12);
 }
 
-.Large-2, 
-.large-2, 
-.L-2, 
 .l-2{
-	width: 16.666%;
+	width: percentage(2/12);
 }
 
-.Large-1, 
-.large-1, 
-.L-1, 
 .l-1{
-	width: 8.333%;
+	width: percentage(1/12);
 }
