--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,9 +1,9 @@
 @media(screen and min-width: 768px){
-	.hide-l{
+	.l-hide{
 		display: none;
 	}
 
-	.show-l{
+	.l-show{
 		display: block;
 	}
 }
@@ -25,59 +25,24 @@
 		width: auto;
 	}
 
-	.s-12{
-		width: 100%;
-	}
+	.s-12{ width: 100%; }
+	.s-11{ width: percentage(11/12); }
+	.s-10{ width: 83.333%; }
+	.s-9{ width: 75%; }
+	.s-8{ width: 66.666%; }
+	.s-7{ width: 58.333%; }
+	.s-6{ width: 50%; }
+	.s-5{ width: 41.666%; }
+	.s-4{ width: 33.333%; }
+	.s-3{ width: 25%; }
+	.s-2{ width: 16.666%; }
+	.s-1{ width: 8.333%; }
 
-	.s-11{
-		width: percentage(11/12);
-	}
-
-	.s-10{
-		width: 83.333%;
-	}
-
-	.s-9{
-		width: 75%;
-	}
-
-	.s-8{
-		width: 66.666%;
-	}
-
-	.s-7{
-		width: 58.333%;
-	}
-
-	.s-6{
-		width: 50%;
-	}
-
-	.s-5{
-		width: 41.666%;
-	}
-
-	.s-4{
-		width: 33.333%;
-	}
-
-	.s-3{
-		width: 25%;
-	}
-
-	.s-2{
-		width: 16.666%;
-	}
-
-	.s-1{
-		width: 8.333%;
-	}
-
-	.hide-s{
+	.s-hide{
 		display: none;
 	}
 
-	.show-s{
+	.s-show{
 		display: block;
 	}
 }
