--- a/css/demo.css
+++ b/css/demo.css
@@ -1,96 +1,93 @@
 /* Coolz - Settings */
+/* Change to 100% for fluid grid */
 /* line 5, ../sass/demo.scss */
 body {
-  font-family: "Helvetica Neue", "Helvetica", helvetica, arial, sans-serif;
-  font-size: 100%;
-  line-height: 100%;
-  color: #222;
   background: #70D5C5;
 }
-
-/* line 13, ../sass/demo.scss */
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 0.3em;
-  line-height: 1em;
-  color: #222222;
-}
-/* line 18, ../sass/demo.scss */
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-  text-decoration: none;
-}
-
-/* line 23, ../sass/demo.scss */
-h1 {
-  margin-bottom: 0.2em;
-  font-size: 3.5em;
-}
-
-/* line 28, ../sass/demo.scss */
-h2 {
-  margin-bottom: 0.3em;
-  font-size: 3em;
-}
-
-/* line 33, ../sass/demo.scss */
-h3 {
-  margin-bottom: 0.3em;
-  font-size: 2.5em;
-}
-
-/* line 38, ../sass/demo.scss */
-h4 {
-  font-size: 2em;
-}
-
-/* line 42, ../sass/demo.scss */
-h5 {
-  font-size: 1.5em;
-}
-
-/* line 46, ../sass/demo.scss */
-h6 {
-  font-size: 1.2em;
-}
-
-/* line 51, ../sass/demo.scss */
-.light,
-.thin {
-  font-weight: normal;
-}
-
-/* line 55, ../sass/demo.scss */
-img {
-  margin-bottom: 0.6em;
-}
-
-/* line 59, ../sass/demo.scss */
-p {
-  margin-bottom: 0.6em;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  font-size: 1.2em;
-  line-height: 1.4em;
-}
-
-/* line 66, ../sass/demo.scss */
-a {
-  color: #222222;
-  text-decoration: underline;
-}
-
-/* line 72, ../sass/demo.scss */
-.demo section .row {
+/* line 9, ../sass/demo.scss */
+body.demo section .row {
   border-bottom: 1px solid white;
 }
-/* line 77, ../sass/demo.scss */
-.demo section [class*="l-"],
-.demo section [class*="s-"] {
+/* line 15, ../sass/demo.scss */
+body.demo section [class^="l-"],
+body.demo section [class^="m-"],
+body.demo section [class^="s-"] {
   padding: 1.25em;
   color: #fff;
   text-align: center;
   background-color: #E37863;
 }
-/* line 83, ../sass/demo.scss */
-.demo section [class*="l-"]:nth-child(odd),
-.demo section [class*="s-"]:nth-child(odd) {
+/* line 21, ../sass/demo.scss */
+body.demo section [class^="l-"]:nth-child(odd),
+body.demo section [class^="m-"]:nth-child(odd),
+body.demo section [class^="s-"]:nth-child(odd) {
   background-color: #eb9f90;
+}
+
+/* line 28, ../sass/demo.scss */
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0.3em;
+  line-height: 1em;
+  color: #222222;
+}
+/* line 33, ../sass/demo.scss */
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+  text-decoration: none;
+}
+
+/* line 38, ../sass/demo.scss */
+h1 {
+  margin-bottom: 0.2em;
+  font-size: 3.5em;
+}
+
+/* line 43, ../sass/demo.scss */
+h2 {
+  margin-bottom: 0.3em;
+  font-size: 3em;
+}
+
+/* line 48, ../sass/demo.scss */
+h3 {
+  margin-bottom: 0.3em;
+  font-size: 2.5em;
+}
+
+/* line 53, ../sass/demo.scss */
+h4 {
+  font-size: 2em;
+}
+
+/* line 57, ../sass/demo.scss */
+h5 {
+  font-size: 1.5em;
+}
+
+/* line 61, ../sass/demo.scss */
+h6 {
+  font-size: 1.2em;
+}
+
+/* line 66, ../sass/demo.scss */
+.light,
+.thin {
+  font-weight: normal;
+}
+
+/* line 70, ../sass/demo.scss */
+img, p {
+  margin-bottom: 0.6em;
+}
+
+/* line 74, ../sass/demo.scss */
+p {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.2em;
+  line-height: 1.4em;
+}
+
+/* line 80, ../sass/demo.scss */
+a {
+  color: #222222;
+  text-decoration: underline;
 }
